refactor: Payment/Ticket 도메인 로직 캡슐화
- Ticket의 hold/expired/ownership 검증 로직 캡슐화
- Payment confirm 관련 상태/금액 검증 메서드로 이동
- Service 계층의 조건 분기 단순화